--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								target="_blank"><span class="label">Linkedin</span></a></li>
 						<li><a href="https://www.youtube.com/channel/UCFgXeeQqk1ki9zSZX9koWhQ"
 								class="icon fa-youtube-play" target="_blank"><span class="label">YouTube</span></a></li>
-						<li><a href="https://github.com/MrUnknownOp" class="icon fa-github" target="_blank"><span
+						<li><a href="https://github.com/LoreGaming" class="icon fa-github" target="_blank"><span
 									class="label">Github</span></a></li>
 						<li><a href="privacy-policy.html" class="icon fa-envelope-o" target="_blank"><span
 									class="label">Privacy Policy</span></a></li>
